--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Recipe",
+  "name": "recipe",
   "version": "1.0.0",
   "description": "Making a shoddy recipe list!",
   "main": "index.js",
